# DTU_Shared_2026

./: .gitignore
AdvancedProg/Assignment7/signup4games-backend/: pom.xml
AdvancedProg/Kasper/: Java_streams.rar
AdvancedProg/Magnus/assignment3-final/: ReadMe.rtf
AdvancedProg/Toke/assignment5/: pom.xml
AdvancedProg/assignment6/roborally/: pom.xml
MOP_2/: CMakeLists.txt  controller.c  controller.h  deckOne.txt  examples.c  main.c  model.c  model.h  view.c  view.h
MOP_2/Controller/: CardServices.c  CardServices.h  controller.c  controller.h  server.c
MOP_2/Magnus_MOP2/: card.h  main.c
MOP_2/Model/: Card.c  Card.h  Types.h  deck.c  deck.h  model.c  model.h
MOP_2/View/: view.c  view.h
MOP_2/python_gui/: backend_client.py  main.py
MachineProg/Kasper/Assignment1/: assignment1.asm
MachineProg/Kasper/Assignment2/: assignment2.asm
MachineProg/MOP1/Assignment 1 /: A1.asm  Assignmet1.drawio
MachineProg/MOP1/Assignment 2 /: A2.asm
MachineProg/MOP1/Assignment 3/: Uden navn.asm
MachineProg/MOP1/Assignment_3/: Uden navn.asm  as3Forreal.asm
MachineProg/MOP1/Assignment_5/: A5.asm
MachineProg/MOP1/Opt_1/: A5.asm  A5_opt1.asm
MachineProg/MOP1/Opt_2/: A5.asm
MachineProg/MOP_project_1/Assignment_3/: A3.asm  A3.drawio  As3.asm  Uden navn.asm  as3Forreal.asm
MachineProg/MOP_project_1/Assignment_5/: A5.asm
MachineProg/MOP_project_1/Opt_2/: A5_opt2.asm
MachineProg/Magnus/: Assignment_1.asm  Uden navn.asm  readS.asm
MachineProg/Thomas/: Assignmet1.asm
MachineProg/Thomas/Assignment 5/: A5.asm
MachineProg/Toke/: Project1.asm
Magnus/: Uden navn.asm
(+343 files in other folders)
